--- a/public/gallery.html
+++ b/public/gallery.html
@@ -7,7 +7,7 @@
   <title>Gallery - SP Kabaddi Group</title>
   <meta name="description" content="Explore our gallery of Kabaddi moments, tournaments, and team events.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/sp-kabaddi-group/public/assets/css/styles.css">
+  <link rel="stylesheet" href="/public/assets/css/styles.css">
   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
   <style>
     /* Additional styles for gallery page */
@@ -143,10 +143,10 @@
       </div>
       <nav>
         <ul class="nav-menu">
-          <li class="nav-item"><a href="/sp-kabaddi-group/index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="/sp-kabaddi-group/public/videos.html" class="nav-link">Videos</a></li>
-          <li class="nav-item"><a href="/sp-kabaddi-group/public/gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="/sp-kabaddi-group/public/register.html" class="nav-link">Register</a></li>
+          <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="/public/videos.html" class="nav-link">Videos</a></li>
+          <li class="nav-item"><a href="/public/gallery.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item"><a href="/public/register.html" class="nav-link">Register</a></li>
         </ul>
       </nav>
     </div>
@@ -256,7 +256,7 @@
   </section>
 
 
-  
+
   <!-- Footer -->
   <footer>
     <div class="container">
@@ -319,7 +319,7 @@
   </div>
 
   <!-- JavaScript -->
-  <script src="/sp-kabaddi-group/public/assets/js/main.js"></script>
+  <script src="/public/assets/js/main.js"></script>
   <script>
     // Gallery Filter Functionality
     document.addEventListener('DOMContentLoaded', function() {
