--- a/public/videos.html
+++ b/public/videos.html
@@ -7,7 +7,7 @@
   <title>Videos - SP Kabaddi Group</title>
   <meta name="description" content="Watch our collection of Kabaddi videos, matches, highlights, and training sessions.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/sp-kabaddi-group/public/assets/css/styles.css">
+  <link rel="stylesheet" href="/public/assets/css/styles.css">
   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 </head>
 
@@ -15,7 +15,7 @@
   <!-- Header -->
   <header>
 
-    
+
     <div class="container header-container">
       <div class="logo">
         <h1>SP Kabaddi Group</h1>
@@ -25,10 +25,10 @@
       </div>
       <nav>
         <ul class="nav-menu">
-          <li class="nav-item"><a href="/sp-kabaddi-group/index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="/sp-kabaddi-group/public/videos.html" class="nav-link">Videos</a></li>
-          <li class="nav-item"><a href="/sp-kabaddi-group/public/gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="/sp-kabaddi-group/public/register.html" class="nav-link">Register</a></li>
+          <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
+          <li class="nav-item"><a href="/public/videos.html" class="nav-link">Videos</a></li>
+          <li class="nav-item"><a href="/public/gallery.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item"><a href="/public/register.html" class="nav-link">Register</a></li>
         </ul>
       </nav>
     </div>
@@ -213,7 +213,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="/sp-kabaddi-group/public/assets/js/main.js"></script>
+  <script src="/public/assets/js/main.js"></script>
 </body>
 
 </html>
