--- a/gallery.html
+++ b/gallery.html
@@ -7,8 +7,8 @@
   <title>Gallery - SP Kabaddi Group</title>
   <meta name="description" content="Explore our gallery of Kabaddi moments, tournaments, and team events.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/public/assets/css/styles.css">
-  <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/styles.css">
+  <!-- <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon"> -->
   <style>
     /* Additional styles for gallery page */
     .modal-container {
@@ -144,9 +144,9 @@
       <nav>
         <ul class="nav-menu">
           <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="/public/videos.html" class="nav-link">Videos</a></li>
-          <li class="nav-item"><a href="/public/gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="/public/register.html" class="nav-link">Register</a></li>
+          <li class="nav-item"><a href="/videos.html" class="nav-link">Videos</a></li>
+          <li class="nav-item"><a href="/gallery.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item"><a href="/register.html" class="nav-link">Register</a></li>
         </ul>
       </nav>
     </div>
@@ -234,7 +234,7 @@
         </div>
 
         <div class="gallery-item" data-category="players">
-          <img src="https://images.stockcake.com/public/2/1/0/2105dc25-f2e6-42a0-8abf-58bad6b96a4a_large/intense-kabaddi-match-stockcake.jpg" alt="Intense Match">
+          <img src="https://images.stockcake.com/2/1/0/2105dc25-f2e6-42a0-8abf-58bad6b96a4a_large/intense-kabaddi-match-stockcake.jpg" alt="Intense Match">
           <div class="gallery-item-content">
             <h3>Intensity of Kabaddi</h3>
             <p>The raw intensity captured during a traditional match</p>
@@ -319,7 +319,7 @@
   </div>
 
   <!-- JavaScript -->
-  <script src="/public/assets/js/main.js"></script>
+  <script src="/main.js"></script>
   <script>
     // Gallery Filter Functionality
     document.addEventListener('DOMContentLoaded', function() {
