--- a/videos.html
+++ b/videos.html
@@ -7,7 +7,7 @@
   <title>Videos - SP Kabaddi Group</title>
   <meta name="description" content="Watch our collection of Kabaddi videos, matches, highlights, and training sessions.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/public/assets/css/styles.css">
+  <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 </head>
 
@@ -26,9 +26,9 @@
       <nav>
         <ul class="nav-menu">
           <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="/public/videos.html" class="nav-link">Videos</a></li>
-          <li class="nav-item"><a href="/public/gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="/public/register.html" class="nav-link">Register</a></li>
+          <li class="nav-item"><a href="/videos.html" class="nav-link">Videos</a></li>
+          <li class="nav-item"><a href="/gallery.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item"><a href="/register.html" class="nav-link">Register</a></li>
         </ul>
       </nav>
     </div>
@@ -213,7 +213,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="/public/assets/js/main.js"></script>
+  <script src="/main.js"></script>
 </body>
 
 </html>
