--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
   <title>Register - SP Kabaddi Group</title>
   <meta name="description" content="Register with SP Kabaddi Group as a player or fan and be part of our growing community.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/public/assets/css/styles.css">
+  <link rel="stylesheet" href="/styles.css">
   <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
   <style>
     /* Additional styles for registration page */
@@ -122,9 +122,9 @@
       <nav>
         <ul class="nav-menu">
           <li class="nav-item"><a href="/index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="/public/videos.html" class="nav-link">Videos</a></li>
-          <li class="nav-item"><a href="/public/gallery.html" class="nav-link">Gallery</a></li>
-          <li class="nav-item"><a href="/public/register.html" class="nav-link">Register</a></li>
+          <li class="nav-item"><a href="/videos.html" class="nav-link">Videos</a></li>
+          <li class="nav-item"><a href="/gallery.html" class="nav-link">Gallery</a></li>
+          <li class="nav-item"><a href="/register.html" class="nav-link">Register</a></li>
         </ul>
       </nav>
     </div>
@@ -341,7 +341,7 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="/public/assets/js/main.js"></script>
+  <script src="/main.js"></script>
 </body>
 
 </html>
