--- a/index.html
+++ b/index.html
@@ -102,24 +102,24 @@
       <div class="gallery-grid">
         <!-- Gallery items will be added dynamically via JavaScript or manually -->
         <div class="gallery-item">
-          <img src="https://media.gettyimages.com/id/1171578598/photo/players-of-telgu-titans-and-jaipur-pink-panthers-in-action-during-the-pro-kabaddi-league.jpg?s=612x612&w=gi&k=20&c=Y8SEUA6D9cVuCgxnaeP6rwQTqSHl73CkTQw3jIIaQAI=" alt="Kabaddi Match Action">
+          <img src="./assets/jump.jpg" alt="Kabaddi Match Action">
           <div class="gallery-item-content">
-            <h3>Pro League Match</h3>
+            <h3>Memorable Moment</h3>
             <p>Players in action during an intense match</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="https://media.gettyimages.com/id/1935073330/photo/ashu-malik-of-dabang-delhi-is-in-action-during-the-pro-kabaddi-league-season-10-match-between.jpg?s=612x612&w=gi&k=20&c=D3nc69bL8UC-GAlWWAf2CY-ZUm_ClAYY4bNMxRPxNXY=" alt="Kabaddi Tournament">
+          <img src="./assets/Hold.jpg" alt="Kabaddi Tournament">
           <div class="gallery-item-content">
             <h3>Defensive Tackle</h3>
             <p>A player being tackled during a match</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="https://easy-peasy.ai/cdn-cgi/image/quality=80,format=auto,width=700/https://media.easy-peasy.ai/514ec986-41e3-4ad5-9e72-fc74873f1b14/b14d679f-f725-4375-8b5c-5d91b62e5548.png" alt="Kabaddi Competition">
+          <img src="./assets/winner.jpg" alt="Kabaddi Competition">
           <div class="gallery-item-content">
             <h3>Championship Match</h3>
-            <p>Final match of the annual tournament</p>
+            <p>2nd Position in Jharkhand</p>
           </div>
         </div>
       </div>
@@ -150,10 +150,10 @@
           </div>
           <p>Join us in our journey to promote the sport of Kabaddi and build a community of passionate players and fans.</p>
           <div class="social-links">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/SpKGDH/"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com/spkabaddigroup/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/@SP_CLUB_Dhanbad"><i class="fab fa-youtube"></i></a>
           </div>
         </div>
         <div class="footer-links">
@@ -178,20 +178,20 @@
           <h3>Contact Us</h3>
           <div class="contact-item">
             <i class="fas fa-map-marker-alt"></i>
-            <p>123 Sports Avenue, Kabaddi Stadium</p>
+            <p>Gandhiroad Hanuman Mandir, Dhanbad</p>
           </div>
           <div class="contact-item">
             <i class="fas fa-phone"></i>
-            <p>+91 9876543210</p>
+            <p>+91 8271882034</p>
           </div>
           <div class="contact-item">
             <i class="fas fa-envelope"></i>
-            <p>info@spkabaddigroup.com</p>
+            <p>spkabaddigroupdhanbad@gmail.com</p>
           </div>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2023 SP Kabaddi Group. All Rights Reserved.</p>
+        <p>&copy; 2017 SP Kabaddi Group. All Rights Reserved.</p>
       </div>
     </div>
   </footer>
